Agregar configuracion para monitoreo