@@ -24,46 +24,36 @@ public class SecurityConfig {
 	@Value("${app.cors.allowed-origins:http://localhost:4200,https://app.erre.cloud}")
 	private String allowedOrigins;
 
-	// Nuevo: leemos el context-path dinámicamente
 	@Value("${server.servlet.context-path:/}")
 	private String contextPath;
 
 	@Bean
 	SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-		http.authorizeHttpRequests((authz) -> authz
-				// Actuator (Prometheus, health, etc.)
-				.requestMatchers(contextPath + "/actuator/**").permitAll()
-
-				// Swagger UI y documentación
-				.requestMatchers(contextPath + "/swagger-ui.html", contextPath + "/swagger-ui/**",
-						contextPath + "/v3/api-docs/**", contextPath + "/swagger-resources/**",
-						contextPath + "/webjars/**")
-				.permitAll()
-
-				// Cualquier otro endpoint requiere autenticación
-				.anyRequest().authenticated());
-
-		http.sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
-		http.oauth2ResourceServer(oauth2 -> oauth2.jwt(jwt -> jwt.jwtAuthenticationConverter(jwtConverter)));
-
-		// API sin estado → deshabilitamos CSRF
 		http.csrf(csrf -> csrf.disable());
 
-		// Configuración de CORS
-		http.cors(cors -> {
-			CorsConfigurationSource source = request -> {
-				CorsConfiguration config = new CorsConfiguration();
-				List<String> origins = Arrays.asList(allowedOrigins.split(","));
-				config.setAllowedOrigins(origins);
-				config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-				config.setAllowedHeaders(List.of("*"));
-				config.setAllowCredentials(true);
-				config.setMaxAge(3600L);
-				return config;
-			};
-			cors.configurationSource(source);
-		});
+		http.cors(cors -> cors.configurationSource(request -> {
+			CorsConfiguration config = new CorsConfiguration();
+			config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+			config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+			config.setAllowedHeaders(List.of("*"));
+			config.setAllowCredentials(true);
+			config.setMaxAge(3600L);
+			return config;
+		}));
+
+		http.sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
+
+		http.authorizeHttpRequests(authz -> authz.requestMatchers(org.springframework.http.HttpMethod.OPTIONS, "/**")
+				.permitAll()
+				.requestMatchers("/actuator/**", "/fastfood/api/actuator/**", "/swagger-ui.html", "/swagger-ui/**",
+						"/v3/api-docs/**", "/swagger-resources/**", "/webjars/**", "/fastfood/api/swagger-ui.html",
+						"/fastfood/api/swagger-ui/**", "/fastfood/api/v3/api-docs/**",
+						"/fastfood/api/swagger-resources/**", "/fastfood/api/webjars/**")
+				.permitAll().anyRequest().authenticated());
+
+		http.oauth2ResourceServer(oauth2 -> oauth2.jwt(jwt -> jwt.jwtAuthenticationConverter(jwtConverter)));
 
 		return http.build();
 	}
+
 }
